v0.3:
  + cross-reference support overhaul (much simpler now)
  + some minor fixes

v0.2:
  + support attributes for dtags too
  + better external command support
  + disallow external commands by default
  + some minor fixes and refactorings

v0.1: (changes with respect to the perl version)

  + no -perl flag in .#de
  + no #fl
  + .Bd -t literal now to be done with "escape" and "verbatim" filters
  + \$@ can be used to interpolate all arguments of an user defined macro
  + -filter option should now be spelled -shell
  + Ft makes use of -t option too
  + markdown exporter (not polished)
  + groff mom exporter (not polished)
  + added experimental restricted mode more template-friendly
  + added named arguments and flags to user defined macros
  + added simple substitution filters and regexp filters
  + added attribute support
  + many minor fixes and improvements